Version beta 3

- The DefaultSessionManager will always look up for a component "nhibernate.session.interceptor" to use as
  a NH Interceptor
  
- The NH Facility will always look up for a component "nhibernate.sessionfactory.interceptor" and 
  associate the instance with the Configuration.Interceptor before creating the session factories

Version beta 2

- Completely rewritten

Version beta 1

- Test cases simplified by the introduction of facilityconfig.xml

Alpha Version 1.0.0
- First release

Future modifications - after the first release - shall be tracked in this file